<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    

  <item android:id="@+id/menu_item_new_log_item"
      android:icon="@android:drawable/ic_menu_add"
      android:title="@string/new_log_item"
      android:showAsAction="ifRoom|withText" />
  
   <item android:id="@+id/menu_stats_item"
      android:icon="@android:drawable/ic_menu_add"
      android:title="@string/stats_item"
      android:showAsAction="ifRoom|withText" />
  
    <item android:id="@+id/menu_toggle_item"
      android:icon="@android:drawable/ic_menu_add"
      android:title="@string/toggle_item"
      android:showAsAction="ifRoom|withText" />
   
     <item android:id="@+id/menu_send_item"
      android:icon="@android:drawable/ic_menu_add"
      android:title="@string/send_item"
      android:showAsAction="ifRoom|withText" />
    
  
     
</menu>
